fix alignment of allergens on small devices

--- a/src/assets/styles/components/_index.scss
+++ b/src/assets/styles/components/_index.scss
@@ -63,6 +63,10 @@
             max-width: 21rem;
             margin: 5rem auto;
 
+            & .allergens {
+                align-self: start;
+            }
+
             & .info {
                 display: flex;
                 flex-direction: column;
